--- a/ifelse_operadores_condicionais.html
+++ b/ifelse_operadores_condicionais.html
@@ -19,6 +19,19 @@
             } else {
                 document.write ('Aqui foi um valor falso')
             }
+            document.write('<hr>')
+
+            //Teste**********************************************
+            var digitoPessoa = prompt('Digite aqui um número')
+            var a = 10
+
+            if (digitoPessoa == a) {
+                document.write('A variável é verdadeira')
+            }
+
+            else {
+                document.write('A variável é falsa')
+            }
 
         </script>
 
