--- a/funcoes.html
+++ b/funcoes.html
@@ -42,13 +42,26 @@
     document.write(notas)
 */
 
-    function soma(a,b){
+    /*function soma(a,b){
         b = b === undefined ? 7 : 2  //podemos fazer esses critérios de controle dentro das funções para evitar possíveis bugs ou resultados inesperados
         
     return a+b
     }
     console.log(soma(5)) //ele desconsidera o b, dando NaN
-    console.log(soma(10,2,5,7)) //desconsidera os outros parâmetros adicionais
+    console.log(soma(10,2,5,7)) //desconsidera os outros parâmetros adicionais*/
+
+
+    //utilização do "arguments" - parâmetros variáveis. O arguments é um objeto.
+
+    function soma(){
+        var resultado = 5
+        for(var i in arguments){
+                
+            resultado += arguments[i]
+        }
+        return resultado
+    }
+    console.log(soma(1,2,3,4))
 
     </script>
 
